Minor comments and formatting

--- a/Python_notebooks/OLCI_RGB_vis.ipynb
+++ b/Python_notebooks/OLCI_RGB_vis.ipynb
@@ -156,7 +156,7 @@
     "\n",
     "    ax=plt.axes(projection=ccrs.Mercator())\n",
     "    ax.coastlines()\n",
-    "    ax.set_extent([min_lon, max_lon, min_lat, max_lat]) # Mediterranean\n",
+    "    ax.set_extent([min_lon, max_lon, min_lat, max_lat])\n",
     "\n",
     "    gl = ax.gridlines(draw_labels=True, x_inline=False, y_inline=False, crs=ccrs.PlateCarree())\n",
     "    gl.xlabels_top=False\n",
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -286,6 +286,13 @@
      "text": [
       "C:\\Users\\hanshil\\AppData\\Roaming\\Python\\Python312\\site-packages\\cartopy\\mpl\\geoaxes.py:1768: UserWarning: The input coordinates to pcolormesh are interpreted as cell centers, but are not monotonically increasing or decreasing. This may lead to incorrectly calculated cell edges, in which case, please supply explicit cell edges to pcolormesh.\n",
       "  result = super().pcolormesh(*args, **kwargs)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Composite image created successfully.\n"
      ]
     }
    ],
@@ -333,13 +340,13 @@
     "selected_dirs    = [sen3_dirs[idx] for idx in selected_indices]\n",
     "\n",
     "# Combine data from all directories\n",
-    "combined_red = []\n",
+    "combined_red   = []\n",
     "combined_green = []\n",
-    "combined_blue = []\n",
-    "combined_lat = []\n",
-    "combined_lon = []\n",
+    "combined_blue  = []\n",
+    "combined_lat   = []\n",
+    "combined_lon   = []\n",
     "\n",
-    "for cur_sen_dir in sen3_dirs:\n",
+    "for cur_sen_dir in selected_dirs:\n",
     "    matching_files = [file for file in os.listdir(cur_sen_dir) if file.endswith('_radiance.nc')]\n",
     "    olci_xr_mf = xr.open_mfdataset([os.path.join(cur_sen_dir, file) for file in matching_files], combine='by_coords')\n",
     "    olci_geo_coords = xr.open_dataset(os.path.join(cur_sen_dir, 'geo_coordinates.nc'))\n",
@@ -367,8 +374,8 @@
     "combined_blue = np.nan_to_num(combined_blue, nan=0.0, posinf=0.0, neginf=0.0)\n",
     "\n",
     "rgb = np.dstack((combined_red, combined_green, combined_blue))\n",
-    "rgb = exposure.equalize_adapthist(rgb)  # Enhance contrast\n",
-    "rgb = exposure.adjust_gamma(rgb, gamma=0.5)  # Boost brightness\n",
+    "rgb = exposure.equalize_adapthist(rgb)       # Enhance contrast\n",
+    "rgb = exposure.adjust_gamma(rgb, gamma=0.5)  # Boost brightness, lower is brighter\n",
     "mesh_rgb = rgb[:, :, :]\n",
     "colorTuple = mesh_rgb.reshape((mesh_rgb.shape[0] * mesh_rgb.shape[1]), 3)\n",
     "colorTuple = np.insert(colorTuple, 3, 1.0, axis=1)\n",
