First commit post branch merger. Some files readded. Changes to RBG visualisation. Minor updates to dates. Minor formatting changes. Positions update.

--- a/Python_notebooks/CMEMS_sat_vis_with_autonomy.ipynb
+++ b/Python_notebooks/CMEMS_sat_vis_with_autonomy.ipynb
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -210,8 +210,8 @@
       "  valid_max: -5.0\n",
       "  valid_min: -35.0\n",
       "Variable: time\n",
-      "  valid_min: 175319.99995053862\n",
-      "  valid_max: 175320.00043452193\n",
+      "  valid_min: 175320.00027319416\n",
+      "  valid_max: 175320.00024131805\n",
       "Variable: dissic\n",
       "  long_name: Dissolved Inorganic Carbon\n",
       "  standard_name: mole_concentration_of_dissolved_inorganic_carbon_in_sea_water\n",
@@ -389,10 +389,10 @@
       "  valid_max: -5.005207061767578\n",
       "  valid_min: -34.99479293823242\n",
       "Variable: time\n",
-      "  validStartDate: 2024-05-28T00:00:00.000000000Z\n",
-      "  validStartIndex: 230\n",
-      "  valid_min: 25566.99999793911\n",
-      "  valid_max: 25567.00001138309\n",
+      "  validStartDate: 2024-06-02T00:00:00.000000000Z\n",
+      "  validStartIndex: 235\n",
+      "  valid_min: 25567.00001138309\n",
+      "  valid_max: 25567.000003332927\n",
       "File: CMEMS_cmems_obs-oc_atl_bgc-plankton_nrt_l3-multi-1km_P1D_April-May2024.nc\n",
       "Base Name: CMEMS_cmems_obs-oc_tl_gc-plankton_nrt_l3-multi-1km_P1D_April-May2024.nc\n",
       "Key Variable: {'CHL': {'variable': 'CHL'}, 'CHL_uncertainty': {'variable': 'CHL_uncertainty'}, 'DIATO': {'variable': 'DIATO'}, 'DIATO_uncertainty': {'variable': 'DIATO_uncertainty'}, 'DINO': {'variable': 'DINO'}, 'DINO_uncertainty': {'variable': 'DINO_uncertainty'}, 'GREEN': {'variable': 'GREEN'}, 'GREEN_uncertainty': {'variable': 'GREEN_uncertainty'}, 'HAPTO': {'variable': 'HAPTO'}, 'HAPTO_uncertainty': {'variable': 'HAPTO_uncertainty'}, 'MICRO': {'variable': 'MICRO'}, 'MICRO_uncertainty': {'variable': 'MICRO_uncertainty'}, 'NANO': {'variable': 'NANO'}, 'NANO_uncertainty': {'variable': 'NANO_uncertainty'}, 'PICO': {'variable': 'PICO'}, 'PICO_uncertainty': {'variable': 'PICO_uncertainty'}, 'PROCHLO': {'variable': 'PROCHLO'}, 'PROCHLO_uncertainty': {'variable': 'PROCHLO_uncertainty'}, 'PROKAR': {'variable': 'PROKAR'}, 'PROKAR_uncertainty': {'variable': 'PROKAR_uncertainty'}, 'flags': {'variable': 'flags'}}\n",
@@ -676,10 +676,10 @@
       "  valid_max: -5.005207061767578\n",
       "  valid_min: -34.99479293823242\n",
       "Variable: time\n",
-      "  validStartDate: 2024-05-28T00:00:00.000000000Z\n",
-      "  validStartIndex: 240\n",
-      "  valid_min: 25566.99999793911\n",
-      "  valid_max: 25567.00001138309\n",
+      "  validStartDate: 2024-06-02T00:00:00.000000000Z\n",
+      "  validStartIndex: 245\n",
+      "  valid_min: 25567.00001138309\n",
+      "  valid_max: 25567.000003332927\n",
       "File: CMEMS_cmems_obs-sl_eur_phy-ssh_nrt_allsat-l4-duacs-0.125deg_P1D_April-May2024.nc\n",
       "Base Name: CMEMS_cmems_obs-sl_eur_phy-ssh_nrt_llsat-l4-duacs-0.125deg_P1D_April-May2024.nc\n",
       "Key Variable: {'adt': {'variable': 'adt'}, 'err_sla': {'variable': 'err_sla'}, 'err_ugosa': {'variable': 'err_ugosa'}, 'err_vgosa': {'variable': 'err_vgosa'}, 'flag_ice': {'variable': 'flag_ice'}, 'sla': {'variable': 'sla'}, 'ugos': {'variable': 'ugos'}, 'ugosa': {'variable': 'ugosa'}, 'vgos': {'variable': 'vgos'}, 'vgosa': {'variable': 'vgosa'}}\n",
@@ -794,8 +794,8 @@
       "  standard_name: sea_surface_height_above_sea_level\n",
       "  units: m\n",
       "Variable: time\n",
-      "  valid_min: 7304.999997939109\n",
-      "  valid_max: 7305.000018105081\n",
+      "  valid_min: 7305.00001138309\n",
+      "  valid_max: 7305.000010054919\n",
       "Variable: ugos\n",
       "  grid_mapping: crs\n",
       "  long_name: Absolute geostrophic velocity: zonal component\n",
@@ -867,8 +867,8 @@
       "  valid_min: -34.875\n",
       "  valid_max: -5.125\n",
       "Variable: time\n",
-      "  valid_min: 175319.99995053862\n",
-      "  valid_max: 175320.00027319416\n",
+      "  valid_min: 175320.00027319416\n",
+      "  valid_max: 175320.00007999028\n",
       "Variable: err_ue\n",
       "  grid_mapping: crs\n",
       "  long_name: Error on depth Ekman driven velocity : zonal component\n",
@@ -1047,17 +1047,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'generate_circle_points' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[5], line 15\u001b[0m\n\u001b[0;32m     12\u001b[0m df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdate\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mto_datetime(df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdate\u001b[39m\u001b[38;5;124m'\u001b[39m]) \u001b[38;5;66;03m# Convert the 'time' column to datetime\u001b[39;00m\n\u001b[0;32m     14\u001b[0m \u001b[38;5;66;03m# 130km circle around deploy point\u001b[39;00m\n\u001b[1;32m---> 15\u001b[0m circle_points \u001b[38;5;241m=\u001b[39m \u001b[43mgenerate_circle_points\u001b[49m(\u001b[38;5;241m60\u001b[39m, \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m24\u001b[39m, \u001b[38;5;241m444\u001b[39m)\n\u001b[0;32m     16\u001b[0m circle_lats, circle_lons \u001b[38;5;241m=\u001b[39m circle_points[:, \u001b[38;5;241m0\u001b[39m], circle_points[:, \u001b[38;5;241m1\u001b[39m]\n\u001b[0;32m     18\u001b[0m \u001b[38;5;66;03m# Load float positions\u001b[39;00m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'generate_circle_points' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# Further presets\n",
     "\n",
     "additional_suffix = '_clean'\n",
-    "zoom_plot    = True\n",
+    "zoom_plot    = False\n",
     "skip_floats  = False\n",
     "skip_gliders = False\n",
-    "plot_markers = False\n",
+    "plot_markers = True\n",
     "\n",
     "# Load autonomy positions\n",
     "csv_file = 'C:\\\\Users\\\\hanshil\\\\Documents\\\\GitHub\\\\biocarbon_nrt_data_viz\\\\Plotting_tools\\\\shared_data\\\\rt_positions.csv'  # Update this path\n",
@@ -1096,7 +1108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1132,7 +1144,7 @@
     "    if skip_ssc and var_category == 'adt':\n",
     "        continue\n",
     "\n",
-    "    for day_offset in [-1,-2]:  # Plot the last day # Change this silly bit of code to be something more readable\n",
+    "    for day_offset in [-2,-1]:  # Plot the last day # Change this silly bit of code to be something more readable\n",
     "        if len(files) > 1:\n",
     "            data_vars = []\n",
     "            for file, data_var in files.items():\n",
