--- a/Python_notebooks/NEODASS_satellite_visualisation_with_autonomy.ipynb
+++ b/Python_notebooks/NEODASS_satellite_visualisation_with_autonomy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,8 +66,8 @@
     "\n",
     "# Global\n",
     "\n",
-    "start_date = datetime(2024, 6, 15) #YYYY, M, DD\n",
-    "end_date = datetime(2024, 6, 17)\n",
+    "start_date = datetime(2024, 6, 20) #YYYY, M, DD\n",
+    "end_date = datetime(2024, 6, 22)\n",
     "\n",
     "min_lon = -35\n",
     "max_lon = -5\n",
@@ -75,7 +75,7 @@
     "max_lat = 66\n",
     "\n",
     "zoom_plot    = True\n",
-    "plot_markers = False\n",
+    "plot_markers = True\n",
     "skip_floats  = False\n",
     "skip_gliders = False\n",
     "skip_ship    = False\n",
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -201,6 +201,11 @@
       "['sla']\n",
       "['sla']\n",
       "['sla']\n",
+      "['sla']\n",
+      "['sla']\n",
+      "['sla']\n",
+      "['sla']\n",
+      "['sla']\n",
       "['latitude_longitude', 'CHL_OC4ME']\n",
       "['latitude_longitude', 'CHL_OC4ME']\n",
       "['latitude_longitude', 'CHL_OC4ME']\n",
@@ -257,6 +262,26 @@
       "['latitude_longitude', 'CHL_OC4ME']\n",
       "['latitude_longitude', 'CHL_OC4ME']\n",
       "['latitude_longitude', 'CHL_OC4ME']\n",
+      "['latitude_longitude', 'CHL_OC4ME']\n",
+      "['latitude_longitude', 'CHL_OC4ME']\n",
+      "['latitude_longitude', 'CHL_OC4ME']\n",
+      "['latitude_longitude', 'CHL_OC4ME']\n",
+      "['latitude_longitude', 'CHL_OC4ME']\n",
+      "['latitude_longitude', 'CHL_OC4ME']\n",
+      "['latitude_longitude', 'CHL_OC4ME']\n",
+      "['latitude_longitude', 'CHL_OC4ME']\n",
+      "['latitude_longitude', 'CHL_OC4ME']\n",
+      "['latitude_longitude', 'CHL_OC4ME']\n",
+      "['latitude_longitude', 'sea_surface_temperature']\n",
+      "['latitude_longitude', 'sea_surface_temperature']\n",
+      "['latitude_longitude', 'sea_surface_temperature']\n",
+      "['latitude_longitude', 'sea_surface_temperature']\n",
+      "['latitude_longitude', 'sea_surface_temperature']\n",
+      "['latitude_longitude', 'sea_surface_temperature']\n",
+      "['latitude_longitude', 'sea_surface_temperature']\n",
+      "['latitude_longitude', 'sea_surface_temperature']\n",
+      "['latitude_longitude', 'sea_surface_temperature']\n",
+      "['latitude_longitude', 'sea_surface_temperature']\n",
       "['latitude_longitude', 'sea_surface_temperature']\n",
       "['latitude_longitude', 'sea_surface_temperature']\n",
       "['latitude_longitude', 'sea_surface_temperature']\n",
@@ -340,6 +365,16 @@
       "['latitude_longitude', 'chl_oc5ci']\n",
       "['latitude_longitude', 'chl_oc5ci']\n",
       "['latitude_longitude', 'chl_oc5ci']\n",
+      "['latitude_longitude', 'chl_oc5ci']\n",
+      "['latitude_longitude', 'chl_oc5ci']\n",
+      "['latitude_longitude', 'chl_oc5ci']\n",
+      "['latitude_longitude', 'chl_oc5ci']\n",
+      "['latitude_longitude', 'chl_oc5ci']\n",
+      "['latitude_longitude', 'chl_oc5', 'pic']\n",
+      "['latitude_longitude', 'chl_oc5', 'pic']\n",
+      "['latitude_longitude', 'chl_oc5', 'pic']\n",
+      "['latitude_longitude', 'chl_oc5', 'pic']\n",
+      "['latitude_longitude', 'chl_oc5', 'pic']\n",
       "['latitude_longitude', 'chl_oc5', 'pic']\n",
       "['latitude_longitude', 'chl_oc5', 'pic']\n",
       "['latitude_longitude', 'chl_oc5', 'pic']\n",
@@ -498,6 +533,31 @@
       "    File: olci_b_1km-CHL_OC4ME-1d-20240616_20240616-nrt.nc, Variable: CHL_OC4ME\n",
       "    File: viirs_noaa20-chl_oc5ci-1d-20240616_20240616-nrt.nc, Variable: chl_oc5ci\n",
       "    File: viirs_suomi-chl_oc5_pic-1d-20240616_20240616-nrt.nc, Variable: chl_oc5\n",
+      "  Date: 2024-06-17 00:00:00\n",
+      "    File: olci_a_1km-CHL_OC4ME-1d-20240617_20240617-nrt.nc, Variable: CHL_OC4ME\n",
+      "    File: olci_b_1km-CHL_OC4ME-1d-20240617_20240617-nrt.nc, Variable: CHL_OC4ME\n",
+      "    File: viirs_noaa20-chl_oc5ci-1d-20240617_20240617-nrt.nc, Variable: chl_oc5ci\n",
+      "    File: viirs_suomi-chl_oc5_pic-1d-20240617_20240617-nrt.nc, Variable: chl_oc5\n",
+      "  Date: 2024-06-18 00:00:00\n",
+      "    File: olci_a_1km-CHL_OC4ME-1d-20240618_20240618-nrt.nc, Variable: CHL_OC4ME\n",
+      "    File: olci_b_1km-CHL_OC4ME-1d-20240618_20240618-nrt.nc, Variable: CHL_OC4ME\n",
+      "    File: viirs_noaa20-chl_oc5ci-1d-20240618_20240618-nrt.nc, Variable: chl_oc5ci\n",
+      "    File: viirs_suomi-chl_oc5_pic-1d-20240618_20240618-nrt.nc, Variable: chl_oc5\n",
+      "  Date: 2024-06-19 00:00:00\n",
+      "    File: olci_a_1km-CHL_OC4ME-1d-20240619_20240619-nrt.nc, Variable: CHL_OC4ME\n",
+      "    File: olci_b_1km-CHL_OC4ME-1d-20240619_20240619-nrt.nc, Variable: CHL_OC4ME\n",
+      "    File: viirs_noaa20-chl_oc5ci-1d-20240619_20240619-nrt.nc, Variable: chl_oc5ci\n",
+      "    File: viirs_suomi-chl_oc5_pic-1d-20240619_20240619-nrt.nc, Variable: chl_oc5\n",
+      "  Date: 2024-06-20 00:00:00\n",
+      "    File: olci_a_1km-CHL_OC4ME-1d-20240620_20240620-nrt.nc, Variable: CHL_OC4ME\n",
+      "    File: olci_b_1km-CHL_OC4ME-1d-20240620_20240620-nrt.nc, Variable: CHL_OC4ME\n",
+      "    File: viirs_noaa20-chl_oc5ci-1d-20240620_20240620-nrt.nc, Variable: chl_oc5ci\n",
+      "    File: viirs_suomi-chl_oc5_pic-1d-20240620_20240620-nrt.nc, Variable: chl_oc5\n",
+      "  Date: 2024-06-21 00:00:00\n",
+      "    File: olci_a_1km-CHL_OC4ME-1d-20240621_20240621-nrt.nc, Variable: CHL_OC4ME\n",
+      "    File: olci_b_1km-CHL_OC4ME-1d-20240621_20240621-nrt.nc, Variable: CHL_OC4ME\n",
+      "    File: viirs_noaa20-chl_oc5ci-1d-20240621_20240621-nrt.nc, Variable: chl_oc5ci\n",
+      "    File: viirs_suomi-chl_oc5_pic-1d-20240621_20240621-nrt.nc, Variable: chl_oc5\n",
       "Temp files:\n",
       "  Date: 2024-05-20 00:00:00\n",
       "    File: slstr_a-sea_surface_temperature-1d-20240520_20240520-nrt.nc, Variable: sea_surface_temperature\n",
@@ -583,6 +643,21 @@
       "  Date: 2024-06-16 00:00:00\n",
       "    File: slstr_a-sea_surface_temperature-1d-20240616_20240616-nrt.nc, Variable: sea_surface_temperature\n",
       "    File: slstr_b-sea_surface_temperature-1d-20240616_20240616-nrt.nc, Variable: sea_surface_temperature\n",
+      "  Date: 2024-06-17 00:00:00\n",
+      "    File: slstr_a-sea_surface_temperature-1d-20240617_20240617-nrt.nc, Variable: sea_surface_temperature\n",
+      "    File: slstr_b-sea_surface_temperature-1d-20240617_20240617-nrt.nc, Variable: sea_surface_temperature\n",
+      "  Date: 2024-06-18 00:00:00\n",
+      "    File: slstr_a-sea_surface_temperature-1d-20240618_20240618-nrt.nc, Variable: sea_surface_temperature\n",
+      "    File: slstr_b-sea_surface_temperature-1d-20240618_20240618-nrt.nc, Variable: sea_surface_temperature\n",
+      "  Date: 2024-06-19 00:00:00\n",
+      "    File: slstr_a-sea_surface_temperature-1d-20240619_20240619-nrt.nc, Variable: sea_surface_temperature\n",
+      "    File: slstr_b-sea_surface_temperature-1d-20240619_20240619-nrt.nc, Variable: sea_surface_temperature\n",
+      "  Date: 2024-06-20 00:00:00\n",
+      "    File: slstr_a-sea_surface_temperature-1d-20240620_20240620-nrt.nc, Variable: sea_surface_temperature\n",
+      "    File: slstr_b-sea_surface_temperature-1d-20240620_20240620-nrt.nc, Variable: sea_surface_temperature\n",
+      "  Date: 2024-06-21 00:00:00\n",
+      "    File: slstr_a-sea_surface_temperature-1d-20240621_20240621-nrt.nc, Variable: sea_surface_temperature\n",
+      "    File: slstr_b-sea_surface_temperature-1d-20240621_20240621-nrt.nc, Variable: sea_surface_temperature\n",
       "Sla files:\n",
       "  Date: 2024-05-20 00:00:00\n",
       "    File: cmems_sea_level-sla-1d-20240520_20240520-nrt.nc, Variable: sla\n",
@@ -640,6 +715,16 @@
       "    File: cmems_sea_level-sla-1d-20240615_20240615-nrt.nc, Variable: sla\n",
       "  Date: 2024-06-16 00:00:00\n",
       "    File: cmems_sea_level-sla-1d-20240616_20240616-nrt.nc, Variable: sla\n",
+      "  Date: 2024-06-17 00:00:00\n",
+      "    File: cmems_sea_level-sla-1d-20240617_20240617-nrt.nc, Variable: sla\n",
+      "  Date: 2024-06-18 00:00:00\n",
+      "    File: cmems_sea_level-sla-1d-20240618_20240618-nrt.nc, Variable: sla\n",
+      "  Date: 2024-06-19 00:00:00\n",
+      "    File: cmems_sea_level-sla-1d-20240619_20240619-nrt.nc, Variable: sla\n",
+      "  Date: 2024-06-20 00:00:00\n",
+      "    File: cmems_sea_level-sla-1d-20240620_20240620-nrt.nc, Variable: sla\n",
+      "  Date: 2024-06-21 00:00:00\n",
+      "    File: cmems_sea_level-sla-1d-20240621_20240621-nrt.nc, Variable: sla\n",
       "Adt files:\n",
       "Bbp files:\n",
       "Pic files:\n",
@@ -688,12 +773,22 @@
       "  Date: 2024-06-15 00:00:00\n",
       "    File: viirs_suomi-chl_oc5_pic-1d-20240615_20240615-nrt.nc, Variable: pic\n",
       "  Date: 2024-06-16 00:00:00\n",
-      "    File: viirs_suomi-chl_oc5_pic-1d-20240616_20240616-nrt.nc, Variable: pic\n"
+      "    File: viirs_suomi-chl_oc5_pic-1d-20240616_20240616-nrt.nc, Variable: pic\n",
+      "  Date: 2024-06-17 00:00:00\n",
+      "    File: viirs_suomi-chl_oc5_pic-1d-20240617_20240617-nrt.nc, Variable: pic\n",
+      "  Date: 2024-06-18 00:00:00\n",
+      "    File: viirs_suomi-chl_oc5_pic-1d-20240618_20240618-nrt.nc, Variable: pic\n",
+      "  Date: 2024-06-19 00:00:00\n",
+      "    File: viirs_suomi-chl_oc5_pic-1d-20240619_20240619-nrt.nc, Variable: pic\n",
+      "  Date: 2024-06-20 00:00:00\n",
+      "    File: viirs_suomi-chl_oc5_pic-1d-20240620_20240620-nrt.nc, Variable: pic\n",
+      "  Date: 2024-06-21 00:00:00\n",
+      "    File: viirs_suomi-chl_oc5_pic-1d-20240621_20240621-nrt.nc, Variable: pic\n"
      ]
     }
    ],
    "source": [
-    "### Plotting most recent data from NEODASS\n",
+    "### Building dictionary of files within date range\n",
     "## List most recent files\n",
     "\n",
     "# List to store matching file names\n",
@@ -789,93 +884,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Date progress...:   0%|          | 0/28 [00:00<?, ?it/s]"
+      "Date progress...:   0%|          | 0/33 [00:00<?, ?it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Opening file: olci_a_1km-CHL_OC4ME-1d-20240615_20240615-nrt.nc for variable: CHL_OC4ME\n",
-      "Appended data for CHL_OC4ME from file: olci_a_1km-CHL_OC4ME-1d-20240615_20240615-nrt.nc\n",
-      "Opening file: olci_b_1km-CHL_OC4ME-1d-20240615_20240615-nrt.nc for variable: CHL_OC4ME\n",
-      "Appended data for CHL_OC4ME from file: olci_b_1km-CHL_OC4ME-1d-20240615_20240615-nrt.nc\n",
-      "Opening file: viirs_noaa20-chl_oc5ci-1d-20240615_20240615-nrt.nc for variable: chl_oc5ci\n",
-      "Appended data for chl_oc5ci from file: viirs_noaa20-chl_oc5ci-1d-20240615_20240615-nrt.nc\n",
-      "Opening file: viirs_suomi-chl_oc5_pic-1d-20240615_20240615-nrt.nc for variable: chl_oc5\n",
-      "Appended data for chl_oc5 from file: viirs_suomi-chl_oc5_pic-1d-20240615_20240615-nrt.nc\n",
-      "Averaged data for chl on 2024-06-15 00:00:00:\n"
+      "Opening file: olci_a_1km-CHL_OC4ME-1d-20240620_20240620-nrt.nc for variable: CHL_OC4ME\n",
+      "Appended data for CHL_OC4ME from file: olci_a_1km-CHL_OC4ME-1d-20240620_20240620-nrt.nc\n",
+      "Opening file: olci_b_1km-CHL_OC4ME-1d-20240620_20240620-nrt.nc for variable: CHL_OC4ME\n",
+      "Appended data for CHL_OC4ME from file: olci_b_1km-CHL_OC4ME-1d-20240620_20240620-nrt.nc\n",
+      "Opening file: viirs_noaa20-chl_oc5ci-1d-20240620_20240620-nrt.nc for variable: chl_oc5ci\n",
+      "Appended data for chl_oc5ci from file: viirs_noaa20-chl_oc5ci-1d-20240620_20240620-nrt.nc\n",
+      "Opening file: viirs_suomi-chl_oc5_pic-1d-20240620_20240620-nrt.nc for variable: chl_oc5\n",
+      "Appended data for chl_oc5 from file: viirs_suomi-chl_oc5_pic-1d-20240620_20240620-nrt.nc\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Date progress...:  96%|█████████▋| 27/28 [01:02<00:02,  2.31s/it]"
+      "Date progress...:  94%|█████████▍| 31/33 [00:01<00:00, 25.22it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Opening file: olci_a_1km-CHL_OC4ME-1d-20240616_20240616-nrt.nc for variable: CHL_OC4ME\n",
-      "Appended data for CHL_OC4ME from file: olci_a_1km-CHL_OC4ME-1d-20240616_20240616-nrt.nc\n",
-      "Opening file: olci_b_1km-CHL_OC4ME-1d-20240616_20240616-nrt.nc for variable: CHL_OC4ME\n",
-      "Appended data for CHL_OC4ME from file: olci_b_1km-CHL_OC4ME-1d-20240616_20240616-nrt.nc\n",
-      "Opening file: viirs_noaa20-chl_oc5ci-1d-20240616_20240616-nrt.nc for variable: chl_oc5ci\n",
-      "Appended data for chl_oc5ci from file: viirs_noaa20-chl_oc5ci-1d-20240616_20240616-nrt.nc\n",
-      "Opening file: viirs_suomi-chl_oc5_pic-1d-20240616_20240616-nrt.nc for variable: chl_oc5\n",
-      "Appended data for chl_oc5 from file: viirs_suomi-chl_oc5_pic-1d-20240616_20240616-nrt.nc\n",
-      "Averaged data for chl on 2024-06-16 00:00:00:\n"
+      "Averaged data for chl on 2024-06-20 00:00:00:\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Date progress...: 100%|██████████| 28/28 [01:46<00:00,  3.82s/it]\n",
-      "Date progress...: 0it [00:00, ?it/s]\n",
-      "Date progress...: 0it [00:00, ?it/s]\n",
-      "Date progress...:   0%|          | 0/23 [00:00<?, ?it/s]"
+      "\n"
      ]
     },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Opening file: viirs_suomi-chl_oc5_pic-1d-20240615_20240615-nrt.nc for variable: pic\n",
-      "Appended data for pic from file: viirs_suomi-chl_oc5_pic-1d-20240615_20240615-nrt.nc\n",
-      "Averaged data for pic on 2024-06-15 00:00:00:\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Date progress...:  96%|█████████▌| 22/23 [00:51<00:02,  2.34s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Opening file: viirs_suomi-chl_oc5_pic-1d-20240616_20240616-nrt.nc for variable: pic\n",
-      "Appended data for pic from file: viirs_suomi-chl_oc5_pic-1d-20240616_20240616-nrt.nc\n",
-      "Averaged data for pic on 2024-06-16 00:00:00:\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Date progress...: 100%|██████████| 23/23 [01:23<00:00,  3.61s/it]\n"
+     "ename": "NameError",
+     "evalue": "name 'df_filtered' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[6], line 133\u001b[0m\n\u001b[0;32m    131\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m obj_type, symbol \u001b[38;5;129;01min\u001b[39;00m object_symbols\u001b[38;5;241m.\u001b[39mitems():\n\u001b[0;32m    132\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m obj_type \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mFloat\u001b[39m\u001b[38;5;124m'\u001b[39m:\n\u001b[1;32m--> 133\u001b[0m         type_data \u001b[38;5;241m=\u001b[39m \u001b[43mdf_filtered\u001b[49m[df_filtered[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mplatform_type\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m==\u001b[39m obj_type]\n\u001b[0;32m    134\u001b[0m         unique_names \u001b[38;5;241m=\u001b[39m type_data[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mplatform_id\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39munique()\n\u001b[0;32m    135\u001b[0m         obj_data \u001b[38;5;241m=\u001b[39m type_data\u001b[38;5;241m.\u001b[39msort_values(by\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdate\u001b[39m\u001b[38;5;124m'\u001b[39m, ascending\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'df_filtered' is not defined"
      ]
     }
    ],
