--- a/Python_notebooks/OLCI_RGB.ipynb
+++ b/Python_notebooks/OLCI_RGB.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,14 +33,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "This token '722a85dc-1bca-3cfa-b42c-1cd89b8e2479' expires 2024-06-17 15:49:28.150777\n",
+      "This token '8f55142f-1bf0-3e60-bbda-1edf1547912d' expires 2024-06-20 10:47:58.553913\n",
       "EO:EUM:DAT:MSG:CLM-IODC\n",
       "EO:EUM:DAT:0394\n",
       "EO:EUM:DAT:0412\n",
@@ -162,15 +162,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Found Datasets: 1 datasets for the given time range\n",
-      "S3A_OL_1_ERR____20240617T110032_20240617T114457_20240617T132442_2665_113_308______MAR_O_NR_002.SEN3\n"
+      "Found Datasets: 4 datasets for the given time range\n",
+      "S3A_OL_1_ERR____20240619T133007_20240619T141432_20240619T155400_2665_113_338______MAR_O_NR_002.SEN3\n",
+      "S3B_OL_1_ERR____20240619T125116_20240619T133541_20240619T151208_2665_094_195______MAR_O_NR_002.SEN3\n",
+      "S3A_OL_1_ERR____20240619T114908_20240619T123333_20240619T141437_2665_113_337______MAR_O_NR_002.SEN3\n",
+      "S3B_OL_1_ERR____20240619T111017_20240619T115442_20240619T133314_2665_094_194______MAR_O_NR_002.SEN3\n"
      ]
     }
    ],
@@ -187,8 +190,8 @@
     "            [min_lon, min_lat]]\n",
     "\n",
     "# Set sensing start and end time\n",
-    "start = datetime.datetime(2024, 6, 17)\n",
-    "end = datetime.datetime(2024, 6, 18)\n",
+    "start = datetime.datetime(2024, 6, 19)\n",
+    "end = datetime.datetime(2024, 6, 20)\n",
     "\n",
     "# Retrieve datasets that match our filter\n",
     "products = selected_collection.search(\n",
@@ -203,31 +206,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Found Datasets: 1 datasets for the given time range\n",
-      "S3A_OL_1_ERR____20240617T110032_20240617T114457_20240617T132442_2665_113_308______MAR_O_NR_002.SEN3\n"
+      "Found Datasets: 4 datasets for the given time range\n",
+      "S3A_OL_1_ERR____20240619T133007_20240619T141432_20240619T155400_2665_113_338______MAR_O_NR_002.SEN3\n",
+      "S3B_OL_1_ERR____20240619T125116_20240619T133541_20240619T151208_2665_094_195______MAR_O_NR_002.SEN3\n",
+      "S3A_OL_1_ERR____20240619T114908_20240619T123333_20240619T141437_2665_113_337______MAR_O_NR_002.SEN3\n",
+      "S3B_OL_1_ERR____20240619T111017_20240619T115442_20240619T133314_2665_094_194______MAR_O_NR_002.SEN3\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Downloading S3A_OL_1_ERR____20240617T110032_20240617T114457_20240617T132442_2665_113_308______MAR_O_NR_002.SEN3: 100%|██████████| 729M/729M [01:39<00:00, 7.32MB/s] \n"
+      "Downloading S3A_OL_1_ERR____20240619T133007_20240619T141432_20240619T155400_2665_113_338______MAR_O_NR_002.SEN3: 100%|██████████| 737M/737M [06:00<00:00, 2.04MB/s] \n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Download of product S3A_OL_1_ERR____20240617T110032_20240617T114457_20240617T132442_2665_113_308______MAR_O_NR_002.SEN3 finished.\n",
+      "Download of product S3A_OL_1_ERR____20240619T133007_20240619T141432_20240619T155400_2665_113_338______MAR_O_NR_002.SEN3 finished.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Downloading S3B_OL_1_ERR____20240619T125116_20240619T133541_20240619T151208_2665_094_195______MAR_O_NR_002.SEN3: 100%|██████████| 730M/730M [07:11<00:00, 1.69MB/s] \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Download of product S3B_OL_1_ERR____20240619T125116_20240619T133541_20240619T151208_2665_094_195______MAR_O_NR_002.SEN3 finished.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Downloading S3A_OL_1_ERR____20240619T114908_20240619T123333_20240619T141437_2665_113_337______MAR_O_NR_002.SEN3: 100%|██████████| 737M/737M [05:47<00:00, 2.12MB/s]  \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Download of product S3A_OL_1_ERR____20240619T114908_20240619T123333_20240619T141437_2665_113_337______MAR_O_NR_002.SEN3 finished.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Downloading S3B_OL_1_ERR____20240619T111017_20240619T115442_20240619T133314_2665_094_194______MAR_O_NR_002.SEN3: 100%|██████████| 728M/728M [06:37<00:00, 1.83MB/s] \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Download of product S3B_OL_1_ERR____20240619T111017_20240619T115442_20240619T133314_2665_094_194______MAR_O_NR_002.SEN3 finished.\n",
       "All downloads are finished.\n",
-      "Unzipped S3A_OL_1_ERR____20240617T110032_20240617T114457_20240617T132442_2665_113_308______MAR_O_NR_002.SEN3.zip\n"
+      "Unzipped S3A_OL_1_ERR____20240619T114908_20240619T123333_20240619T141437_2665_113_337______MAR_O_NR_002.SEN3.zip\n",
+      "Unzipped S3A_OL_1_ERR____20240619T133007_20240619T141432_20240619T155400_2665_113_338______MAR_O_NR_002.SEN3.zip\n",
+      "Unzipped S3B_OL_1_ERR____20240619T111017_20240619T115442_20240619T133314_2665_094_194______MAR_O_NR_002.SEN3.zip\n",
+      "Unzipped S3B_OL_1_ERR____20240619T125116_20240619T133541_20240619T151208_2665_094_195______MAR_O_NR_002.SEN3.zip\n"
      ]
     }
    ],
